# LICENE_PLATE_RECOG

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  streamlit.py
configs/: config.py
domain/: licence_plate_recognition.py
models/: convert.py  rec_model_f16.onnx
