[project]
name = "licene-plate-recog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "onnxruntime>=1.22.1",
    "opencv-python-headless>=4.12.0.88",
    "python-multipart>=0.0.20",
    "streamlit>=1.48.1",
    "uvicorn>=0.35.0",
]
